--- a/adidas/index.html
+++ b/adidas/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
     <header>
         <div class="logo">
             <img src="img/logo-add.png" alt="google" style="width: 70px;">
@@ -14,6 +15,7 @@
         </div>
         
     </header>
+
     <nav>
         <ul>
             <li><a href="#home">Inicio</a></li>
@@ -22,6 +24,7 @@
             <li><a href="#contact">Contato</a></li>
         </ul>
     </nav>
+
     <main class="corpo">
         <section class="banner">
             <a href="#">
@@ -29,27 +32,48 @@
                 <h3>Adidas Superstar</h3>
             </a>
         </section>
+
         <section id="about" class="about">
             <h2>About</h2>
             <img src="img/logo-add.png" alt="adidas">
             <p>The Adidas brand is a global leader in the sports industry, known for its innovative and stylish athletic footwear, apparel, and accessories. With a rich history dating back to the early 20th century, Adidas has become synonymous with quality, performance, and iconic design. From professional athletes to casual enthusiasts, Adidas products are trusted and loved by millions around the world. Whether you're hitting the gym, playing sports, or simply looking for fashionable streetwear, Adidas has something for everyone. Experience the passion and excellence of the Adidas brand today.The Adidas brand is a global leader in the sports industry, known for its innovative and stylish athletic footwear, apparel, and accessories. With a rich history dating back to the early 20th century, Adidas has become synonymous with quality, performance, and iconic design. From professional athletes to casual enthusiasts, Adidas products are trusted and loved by millions around the world. Whether you're hitting the gym, playing sports, or simply looking for fashionable streetwear, Adidas has something for everyone. Experience the passion and excellence of the Adidas brand today.</p>
         </section>
-        <section id="services">
-            <h2>Services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
 
+        <section id="services" class="services">
+            <h2>Services</h2>
+            <div class="service-cards">
+                <div class="service-card">
+                    <h3>Running Shoes</h3>
+                    <p>Discover our collection of high-performance running shoes designed to enhance your running experience.</p>
+                </div>
+                <div class="service-card">
+                    <h3>Training Apparel</h3>
+                    <p>Explore our range of training apparel that combines style and functionality for your workouts.</p>
+                </div>
+                <div class="service-card">
+                    <h3>Outdoor Gear</h3>
+                    <p>Get ready for your outdoor adventures with our durable and reliable outdoor gear.</p>
+                </div>
+                <div class="service-card">
+                    <h3>Accessories</h3>
+                    <p>Complete your look with our wide selection of accessories, including bags, hats, and socks.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>Contact</h2>
+            <p>Have a question or need assistance? Contact us using the form below and we'll get back to you as soon as possible.</p>
             <form action="" class="form-contact">
                 <input type="text" name="name" id="name" placeholder="Digite seu nome">
                 <input type="email" name="email" id="email" placeholder="Digite seu email">
                 <textarea name="message" id="message" cols="30" rows="5" placeholder="Digite sua mensagem"></textarea>
                 <button type="submit">Enviar</button>
         </section>
-        <section id="newsletter">
+
+        <section id="newsletter" class="newsletter">
             <h2>Newsletter</h2>
+            <p>Sign up for our newsletter to receive the latest news and updates from Adidas.</p>
             <form action="">
                 <input type="email" name="email" id="email" placeholder="Digite seu email">
                 <button type="submit">Enviar</button>
